--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="page.css">
 </head>
 <body>
-    <a href="https://haru255.github.io/BreakDown/"><h2>ブロック崩し</h2></a>
+    <a href="https://haru255.github.io/BreakDown/"><h2>ブロック崩し(音が鳴ります)</h2></a>
     <a href="https://haru255.github.io/BreakDown/"><img src="BreakDown.png" alt="ブロック崩し" class="image"></a>
 </body>
 </html>
