作品の追加

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <a href="https://haru255.github.io/BreakDown/"><h2>ブロック崩し(音が鳴ります)</h2></a>
-    <a href="https://haru255.github.io/BreakDown/"><img src="BreakDown.png" alt="ブロック崩し" class="image"></a>
+    <a href="https://haru255.github.io/BreakDown/"><img src="./images/BreakDown.png" alt="ブロック崩し" class="image"></a>
+    <a href="https://github.com/haru255/Gyorori"><h2>マウスカーソルを追う目玉</h2></a>
+    <a href="https://github.com/haru255/Gyorori"><img src="./images/Gyorori.png" alt="マウスカーソルを追う目玉" class="image"></a>
 </body>
 </html>
