作品の追加 ライフゲーム

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="https://haru255.github.io/BreakDown/"><img src="./images/BreakDown.png" alt="ブロック崩し" class="image"></a>
     <a href="https://github.com/haru255/Gyorori"><h2>マウスカーソルを追う目玉</h2></a>
     <a href="https://github.com/haru255/Gyorori"><img src="./images/Gyorori.png" alt="マウスカーソルを追う目玉" class="image"></a>
+    <a href="https://github.com/haru255/Game-of-lifeJS"><h2>ライフゲーム</h2></a>
+    <a href="https://github.com/haru255/Game-of-lifeJS"><img src="./images/GameOfLife.png" alt="ライフゲーム" class="image"></a>
 </body>
 </html>
